# Oculis-Yolo-Training

./: .gitignore  README.md  bus-data-generator.py  bus-detector.py  data.md  data.yaml  data2cvat.py  default.yaml  download_all_data.py  generator.py  models.xlsx  number-detector-stitching.py  number-detector.py  number_data.yaml  number_default.yaml  pipeline.py  plan.md  pyproject.toml  requirements.txt  roboflow_download.py  stitch.py  train.py  visualise.ipynb
src/: ai.py  bus_number_stitch.py  coco.py  data_wrangler.py  invert.py  merger.py  remap.py  roboflow.py  stitching.py  utils.py
